untuk yang main languagenya, b inggris belum semyua nya diubah terutam d

--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -8,11 +8,6 @@
     "shareStory": "Share Story"
   },
   "footer": {
-    "home": "Home",
-    "explore": "Explore",
-    "eduboard": "EduBoard",
-    "about": "About Us",
-    "privacy": "Privacy",
     "rights": "All Rights Reserved."
   },
   "home": {
@@ -28,7 +23,7 @@
       "description": "A three-layer architecture that transforms personal stories into powerful educational tools.",
       "step1": {
         "title": "1. Story Collection",
-        "description": "Community members share experiences via WhatsApp. Youth ambassadors help record stories from elders."
+        "description": "Community members share experiences via Telegram. Youth ambassadors help record stories from elders."
       },
       "step2": {
         "title": "2. AI Processing",
@@ -95,7 +90,7 @@
         "peace": "Peacebuilding",
         "wisdom": "Local Wisdom"
       },
-      "submitButton": "Send via WhatsApp",
+      "submitButton": "Send via Telegram",
       "aiHelper": {
         "title": "Siaga-Bot",
         "description": "Your AI assistant for disaster education.",
@@ -143,6 +138,202 @@
   "storyCard": {
     "readMore": "Read More"
   },
+  "storyDetail": {
+    "otherStories": "Explore Other Stories"
+  },
+  "interactive": {
+    "title": "Interactive Learning Hub",
+    "description": "Explore Aceh's stories through gamified quizzes, educational videos, and interactive comics",
+    "masterQuiz": "Aceh Knowledge Challenge",
+    "masterQuizDescription": "Test your overall knowledge about Aceh's culture, history, and resilience.",
+    "startQuiz": "Start Quiz",
+    "videosTitle": "Educational Videos",
+    "videosDescription": "Watch educational videos from our story collection to deepen your understanding.",
+    "watch": "Watch",
+    "viewAllVideos": "View All Videos",
+    "exploreAll": "Browse All",
+    "comicsTitle": "Interactive Digital Comics",
+    "comicsDescription": "Experience stories in a visually engaging comic strip format.",
+    "readComic": "Read Comic",
+    "leaderboard": "Leaderboard",
+    "leaderboardDescription": "See who's leading the learning journey.",
+    "viewFullLeaderboard": "View Full Leaderboard",
+    "achievements": "Achievement Badges",
+    "achievementsDescription": "Collect badges as you learn.",
+    "quickAccess": "Quick Access to Stories",
+    "quickAccessDescription": "Jump directly to full story experiences with all educational content.",
+    "viewFullStory": "View Full Story",
+    "exploreAllStories": "Explore All Stories",
+    "viewAllStories": "View All Stories",
+    "tsunamiExpert": "Tsunami Expert",
+    "disasterPrepared": "Disaster Prepared",
+    "communityHelper": "Community Helper",
+    "peaceBuilder": "Peace Builder",
+    "wisdomKeeper": "Wisdom Keeper",
+    "tsunamiBadge": "Tsunami",
+    "communityBuilderBadge": "Community Builder",
+    "wisdomKeeperBadge": "Wisdom Keeper",
+    "peaceMakerBadge": "Peace Maker",
+    "emergencyReadyBadge": "Emergency Ready",
+    "educatorBadge": "Educator"
+  },
+  "eduboard": {
+    "title": "Physical EduBoard",
+    "description": "Bridging the digital and physical worlds for inclusive and sustainable community learning.",
+    "whatIsItTitle": "What is an EduBoard?",
+    "whatIsItDescription": "EduBoard is a physical information board designed for public spaces like schools, village offices, or community centers. It displays story summaries, QR codes leading to interactive digital content (videos, comics, quizzes), and essential disaster preparedness information.",
+    "useItTitle": "Use It in Your Community",
+    "useItDescription": "We encourage schools, communities, and volunteers to use the EduBoard. Download our design assets for free and follow the guide to set it up in your environment.",
+    "downloadAssets": "Download Poster Assets",
+    "viewGuide": "View Guide",
+    "editorTitle": "EduBoard AI Editor",
+    "editorDescription": "Choose the type of content you want to create or preview. The AI will help fill the content based on the template you choose.",
+    "presentationTitle": "Presentation Slides",
+    "presentationDescription": "Create a structured 10-slide educational presentation on topics like disaster preparedness.",
+    "storyboardTitle": "Storyboard Content",
+    "storyboardDescription": "Design a 4-slide visual narrative in a vertical format like an Instagram Story, packed with images and text.",
+    "quizTitle": "Interactive Quiz Cards",
+    "quizDescription": "Create interactive quiz cards to test understanding with instant feedback.",
+    "infographicTitle": "A4 Infographic",
+    "infographicDescription": "Generate a single-page, information-dense A4 infographic ready for printing.",
+    "minigameTitle": "Premium Content: Mini Game",
+    "minigameDescription": "Build interactive disaster response game scenarios with AI-driven content.",
+    "backToSelection": "Back to Selection",
+    "printablePreviewTitle": "Printable Content Preview (A4)",
+    "printablePreviewDescription": "This is a preview of how the infographic will look. This content is designed to be printed on A4 paper.",
+    "learnMore": "Learn More",
+    "scanQr": "Scan the QR Code to access all stories and interactive content.",
+    "slidePreviewTitle": "Presentation Slide Preview",
+    "slidePreviewDescription": "Use the arrow buttons or the dots below to navigate the slides.",
+    "storyboardPreviewTitle": "Storyboard Preview",
+    "storyboardPreviewDescription": "A vertical format designed for dense visual narratives.",
+    "quizPreviewTitle": "Quiz Card Preview",
+    "quizPreviewDescription": "Answer the question to proceed. Use the arrow buttons to navigate if already answered.",
+    "restartQuiz": "Restart Quiz",
+    "minigameIntroTitle": "Flood at School",
+    "minigameIntroDescription": "You are a middle school student. It's raining heavily, and water is starting to enter your school grounds. You must act quickly and correctly to ensure everyone is safe.",
+    "minigameStart": "Start Scenario",
+    "minigameScore": "Score:",
+    "minigameComplete": "Scenario Complete!",
+    "minigameFinalScore": "Final Score:",
+    "minigamePlayAgain": "Play Again"
+  },
+  "waveOfSchool": {
+    "heroTitle": "Wave of School: When Culture Meets AI, Teachers Become Creators",
+    "heroDescription": "Empowering teachers and schools with AI to create, adapt, and share interactive learning content rooted in local wisdom.",
+    "joinAsSchool": "Join as School",
+    "tryAIGenerator": "Try AI Content Generator",
+    "visionTitle": "Education That Remembers, Learns, and Evolves",
+    "visionDescription1": "From disaster education to peacebuilding, Wave of School transforms stories into smart, adaptive learning modules powered by AI.",
+    "visionDescription2": "Teachers don’t start from zero — they co-create with culture, community, and technology.",
+    "visionDescription3": "It’s how Aceh teaches the world to learn differently.",
+    "visionWoV": "Wave of Voice",
+    "visionWoVSub": "Stories",
+    "visionWoS": "Wave of School",
+    "visionWoSSub": "Learning Content",
+    "howItWorksTitle": "From Story to Smart Lesson",
+    "howItWorksDescription": "The AI content generation process simplifies lesson creation, allowing teachers to focus on what they do best: teaching.",
+    "step1Title": "1. Input",
+    "step1Description": "Teachers select a theme, upload a local story, or a short interview video.",
+    "step2Title": "2. AI Generation",
+    "step2Description": "The system transforms the input into quizzes, comics, posters, or interactive modules.",
+    "step3Title": "3. Output & Share",
+    "step3Description": "Teachers can use it directly in class or upload it to the EduBoard Hub to share.",
+    "demoButton": "Generate Free Demo",
+    "aiHubTitle": "AI Content Hub: Discover, Remix, Teach",
+    "aiHubDescription": "Explore an ever-growing ecosystem of ready-to-use content, created by AI and curated by educators.",
+    "browseModules": "Browse 100+ AI-Learning Modules",
+    "forSchoolsTitle": "For Schools: Join the Wave",
+    "forSchoolsDescription": "Become a pioneering partner school and get exclusive access to our AI learning ecosystem.",
+    "forSchoolsPoint1": "Access to 100+ AI-based lesson plans.",
+    "forSchoolsPoint2": "Dashboard for tracking student activity & interaction.",
+    "forSchoolsPoint3": "Co-creation features with other schools.",
+    "forSchoolsPoint4": "Digital branding: “Wave of School Certified Partner”.",
+    "applyButton": "Apply as Partner School",
+    "bookDemoButton": "Book a Live Demo",
+    "forTeachersTitle": "For Teachers: Your Voice, Your Lesson",
+    "forTeachersQuote": "“Every teacher has a story. Every story can teach the world.”",
+    "forTeachersPoint1": "Get automatic templates (PPT, comics, quizzes).",
+    "forTeachersPoint2": "Get an AI Teaching Assistant (generates ideas & questions).",
+    "forTeachersPoint3": "Share your results with the teacher community across Aceh.",
+    "startCreatingButton": "Start Creating with AI",
+    "showcaseTitle": "AI in Action",
+    "showcaseDescription": "See how Wave of School is being used in the classroom to create unforgettable learning experiences.",
+    "impactTitle": "Our Impact, In Numbers",
+    "impactDescription": "Driving real change in the local education ecosystem through technology adoption and community participation.",
+    "impactSchools": "Schools Joined",
+    "impactLessons": "AI Lessons Generated",
+    "impactStudents": "Students Engaged",
+    "impactSatisfaction": "Teacher Satisfaction",
+    "testimonial": "“With Wave of School, I turned my tsunami story into a digital lesson that my students love.”",
+    "testimonialAuthor": "Ibu Nurdiani",
+    "testimonialRole": "Teacher, SDN Simeulue Barat",
+    "joinMovementTitle": "Be the Next Wave",
+    "joinMovementDescription": "Let's collaborate for the future of education in Aceh. Whatever your role, you can be part of the change.",
+    "joinForTeachers": "For Teachers",
+    "joinForTeachersDesc": "Start creating content and get access to the AI Assistant.",
+    "joinForSchools": "For Schools",
+    "joinForSchoolsDesc": "Register your school as a pioneering partner.",
+    "joinForOrgs": "For Organizations",
+    "joinForOrgsDesc": "Explore collaboration opportunities for a broader impact.",
+    "collaborateButton": "Collaborate with Us",
+    "becomePartnerButton": "Become a Partner"
+  },
+  "profile": {
+    "redirecting": "Redirecting to login...",
+    "welcome": "Welcome",
+    "teacher": "Teacher",
+    "schoolPartner": "School Partner",
+    "quote": "\"Today's wisdom becomes tomorrow's lesson. Let's create together.\"",
+    "lessonsCreated": "AI Lessons Created",
+    "studentsReached": "Students Reached",
+    "storyImpact": "Story Impact Score",
+    "reflectionsCollected": "Reflections Collected",
+    "signOut": "Sign Out",
+    "aiStudioTitle": "AI Studio: Create New Content",
+    "aiStudioDescription": "Transform stories or your own ideas into engaging learning materials in just a few clicks.",
+    "lesson": "Lesson",
+    "quiz": "Quiz",
+    "comic": "Comic",
+    "reflection": "Reflection",
+    "eduPoster": "EduPoster",
+    "startWithStory": "Start with a story from Wave of Voice:",
+    "searchStoryPlaceholder": "Search for a story (e.g. 'Smong')",
+    "generateButton": "Generate",
+    "myContentTab": "My AI Content",
+    "libraryTab": "Learning Library",
+    "lessonsTab": "Lessons",
+    "quizzesTab": "Quizzes",
+    "comicsTab": "Comics",
+    "quizExampleTitle": "Interactive Quiz: Smong & Science",
+    "quizExampleDescription": "Based on: Smong Story",
+    "editButton": "Edit",
+    "previewButton": "Preview",
+    "createNewContent": "Create New Content",
+    "inspirationHubTitle": "Inspiration Hub",
+    "inspirationHubDescription": "Discover and remix lessons from other educators.",
+    "libraryPlaceholder": "Learning library content will be displayed here.",
+    "schoolHubTitle": "School Hub",
+    "schoolHubDescription": "Monitor activity and manage teachers in your organization.",
+    "teachersJoined": "Teachers Joined",
+    "totalLessons": "Total Lessons Created",
+    "manageTeachers": "Manage Teachers",
+    "achievementsTitle": "Achievements",
+    "achievement1": "First AI Lesson Created",
+    "achievement2": "Local Wisdom Integrator",
+    "achievement3": "Top 10 EduBoard Contributor",
+    "communityFeedTitle": "Community Feed",
+    "communityFeedExample1_part1": "Pak Budi",
+    "communityFeedExample1_part2": " just uploaded a new quiz: 'Smong & Science'.",
+    "communityFeedExample2_part1": "Event:",
+    "communityFeedExample2_part2": " Workshop EduAI in Banda Aceh - ",
+    "communityFeedExample2_part3": "Join Now",
+    "viewAll": "View All",
+    "reflectionsTitle": "Student Reflections",
+    "reflectionExample": "\"I just learned that community work can also prevent disasters.\"",
+    "reflectionAuthor": "- Student (Anonymous)",
+    "impactReport": "View Impact Report"
+  },
   "languageToggle": {
     "label": "Change Language"
   },
@@ -181,7 +372,7 @@
     "bah-tangse-sungai-murka": {
       "title": "Bah Tangse: When the River Raged",
       "summary": "A deep testimony about the devastating flash flood in Tangse in 2011, a tragedy caused by deforestation and a bitter lesson on the importance of protecting nature.",
-      "fullText": "That night, March 10, 2011, the sky seemed to break over Tangse. The rain that fell was no longer just rain, but like water being poured from the sky without stopping. Those of us living along the Krueng Tangse were used to the river rising, but that night was different. Around midnight, we heard a rumbling sound that was not from thunder. The sound grew louder, like a collapsing mountain. Some of us who were curious tried to look outside. What we saw was a horrifying scene: the river water was overflowing wildly, its color pitch black, and carrying with it dozens of giant logs that collided with each other. It wasn't an ordinary flood, it was 'Bah' – a raging flood.\\n\\nThe village head shouted through the mosque's loudspeaker, 'The water is rising! Save yourselves! Run to high ground!' The electricity went out, making the atmosphere even more panicked and tense. In the pitch dark, we could only rely on instinct. The sound of giant logs hitting bridges and houses sounded so close. Even the wooden stilt houses were powerless, uprooted from their foundations and swept away by the current. We ran as fast as we could to the hills, to higher ground, with only the clothes on our backs. From the top of the hill, we watched our village being devoured by the ferocious flood. In the morning, as the water began to recede, all that was left was thick mud and debris. The main bridge was broken, dozens of houses were gone, and our rice fields had turned into a sea of mud. We realized, this was not just a natural disaster. This was the result of greed. The forest upstream that should have been a buffer had been stripped bare by illegal logging. The river no longer had a barrier. Bah Tangse became the bitterest lesson for us, that destroying nature is the same as destroying ourselves. Since then, we have vowed to protect our forests, to replant trees, as a legacy so that a similar tragedy does not happen again."
+      "fullText": "That night, March 10, 2011, the sky seemed to break over Tangse. The rain that fell was no longer just rain, but like water being poured from the sky without stopping. Those of us living along the Krueng Tangse were used to the river rising, but that night was different. Around midnight, we heard a rumbling sound that was not from thunder. The sound grew louder, like a collapsing mountain. Some of us who were curious tried to look outside. What we saw was a horrifying scene: the river water was overflowing wildly, its color pitch black, and carrying with it dozens of giant logs that collided with each other. It wasn't an ordinary flood, it was 'Bah' – a raging flood.\n\nThe village head shouted through the mosque's loudspeaker, 'The water is rising! Save yourselves! Run to high ground!' The electricity went out, making the atmosphere even more panicked and tense. In the pitch dark, we could only rely on instinct. The sound of giant logs hitting bridges and houses sounded so close. Even the wooden stilt houses were powerless, uprooted from their foundations and swept away by the current. We ran as fast as we could to the hills, to higher ground, with only the clothes on our backs. From the top of the hill, we watched our village being devoured by the ferocious flood. In the morning, as the water began to recede, all that was left was thick mud and debris. The main bridge was broken, dozens of houses were gone, and our rice fields had turned into a sea of mud. We realized, this was not just a natural disaster. This was the result of greed. The forest upstream that should have been a buffer had been stripped bare by illegal logging. The river no longer had a barrier. Bah Tangse became the bitterest lesson for us, that destroying nature is the same as destroying ourselves. Since then, we have vowed to protect our forests, to replant trees, as a legacy so that a similar tragedy does not happen again."
     },
     "api-di-bukit-barisan": {
       "title": "Fire on the Barisan Hills",
@@ -240,3 +431,5 @@
     }
   }
 }
+
+    
