--- a/src/lib/i18n/id.json
+++ b/src/lib/i18n/id.json
@@ -8,11 +8,6 @@
     "shareStory": "Bagikan Cerita"
   },
   "footer": {
-    "home": "Beranda",
-    "explore": "Jelajahi",
-    "eduboard": "EduBoard",
-    "about": "Tentang Kami",
-    "privacy": "Privasi",
     "rights": "Hak Cipta Dilindungi."
   },
   "home": {
@@ -143,6 +138,9 @@
   "storyCard": {
     "readMore": "Baca Selengkapnya"
   },
+  "storyDetail": {
+    "otherStories": "Jelajahi Cerita Lain"
+  },
   "languageToggle": {
     "label": "Ganti Bahasa"
   },
@@ -156,6 +154,199 @@
     "fabAsk": "Tanya Siaga-Bot",
     "fabExplore": "Jelajahi Cerita",
     "fabShare": "Bagikan Cerita"
+  },
+  "interactive": {
+    "title": "Pusat Pembelajaran Interaktif",
+    "description": "Jelajahi cerita-cerita Aceh melalui kuis gamifikasi, video edukatif, dan komik interaktif",
+    "masterQuiz": "Tantangan Pengetahuan Aceh",
+    "masterQuizDescription": "Uji pengetahuan umum Anda tentang budaya, sejarah, dan ketahanan Aceh.",
+    "startQuiz": "Mulai Kuis",
+    "videosTitle": "Video Edukasi",
+    "videosDescription": "Tonton video edukasi dari koleksi cerita kami untuk memperdalam pemahaman.",
+    "watch": "Tonton",
+    "viewAllVideos": "Lihat Semua Video",
+    "exploreAll": "Jelajahi Semua",
+    "comicsTitle": "Komik Digital Interaktif",
+    "comicsDescription": "Alami cerita dalam format komik strip yang menarik secara visual.",
+    "readComic": "Baca Komik",
+    "leaderboard": "Papan Peringkat",
+    "leaderboardDescription": "Lihat siapa yang memimpin perjalanan belajar.",
+    "viewFullLeaderboard": "Lihat Papan Peringkat Lengkap",
+    "achievements": "Lencana Prestasi",
+    "achievementsDescription": "Kumpulkan lencana saat Anda belajar.",
+    "quickAccess": "Akses Cepat ke Cerita",
+    "quickAccessDescription": "Langsung ke pengalaman cerita lengkap dengan semua konten edukatif.",
+    "viewFullStory": "Lihat Cerita Lengkap",
+    "exploreAllStories": "Jelajahi Semua Cerita",
+    "viewAllStories": "Lihat Semua Cerita",
+    "tsunamiExpert": "Pakar Tsunami",
+    "disasterPrepared": "Siaga Bencana",
+    "communityHelper": "Penolong Komunitas",
+    "peaceBuilder": "Pembangun Perdamaian",
+    "wisdomKeeper": "Penjaga Kearifan",
+    "tsunamiBadge": "Tsunami",
+    "communityBuilderBadge": "Pembangun Komunitas",
+    "wisdomKeeperBadge": "Penjaga Kearifan",
+    "peaceMakerBadge": "Pembawa Damai",
+    "emergencyReadyBadge": "Siap Darurat",
+    "educatorBadge": "Pendidik"
+  },
+  "eduboard": {
+    "title": "EduBoard Fisik",
+    "description": "Menjembatani dunia digital dan fisik untuk pembelajaran komunitas yang inklusif dan berkelanjutan.",
+    "whatIsItTitle": "Apa itu EduBoard?",
+    "whatIsItDescription": "EduBoard adalah papan informasi fisik yang dirancang untuk ruang publik seperti sekolah, kantor desa, atau pusat komunitas. Ini menampilkan ringkasan cerita, kode QR yang mengarah ke konten digital interaktif (video, komik, kuis), dan informasi penting kesiapsiagaan bencana.",
+    "useItTitle": "Gunakan di Komunitas Anda",
+    "useItDescription": "Kami mendorong sekolah, komunitas, dan sukarelawan untuk menggunakan EduBoard. Unduh aset desain kami secara gratis dan ikuti panduan untuk memasangnya di lingkungan Anda.",
+    "downloadAssets": "Unduh Aset Poster",
+    "viewGuide": "Lihat Panduan",
+    "editorTitle": "Editor AI EduBoard",
+    "editorDescription": "Pilih jenis konten yang ingin Anda buat atau pratinjau. AI akan membantu mengisi konten berdasarkan templat yang Anda pilih.",
+    "presentationTitle": "Slide Presentasi",
+    "presentationDescription": "Buat presentasi edukatif 10 slide terstruktur tentang topik seperti kesiapsiagaan bencana.",
+    "storyboardTitle": "Konten Storyboard",
+    "storyboardDescription": "Rancang narasi visual 4 slide dalam format vertikal seperti Instagram Story, penuh dengan gambar dan teks.",
+    "quizTitle": "Kartu Kuis Interaktif",
+    "quizDescription": "Buat kartu kuis interaktif untuk menguji pemahaman dengan umpan balik instan.",
+    "infographicTitle": "Infografis A4",
+    "infographicDescription": "Hasilkan infografis satu halaman yang padat informasi dalam format A4 dan siap cetak.",
+    "minigameTitle": "Konten Premium: Game Mini",
+    "minigameDescription": "Bangun skenario game respons bencana interaktif dengan konten yang didorong oleh AI.",
+    "backToSelection": "Kembali ke Pilihan",
+    "printablePreviewTitle": "Pratinjau Konten Cetak (A4)",
+    "printablePreviewDescription": "Ini adalah pratinjau bagaimana infografis akan terlihat. Konten ini dirancang untuk dicetak di atas kertas A4.",
+    "learnMore": "Pelajari Lebih Lanjut",
+    "scanQr": "Pindai Kode QR untuk mengakses semua cerita dan konten interaktif.",
+    "slidePreviewTitle": "Pratinjau Slide Presentasi",
+    "slidePreviewDescription": "Gunakan tombol panah atau titik di bawah untuk menavigasi slide.",
+    "storyboardPreviewTitle": "Pratinjau Storyboard",
+    "storyboardPreviewDescription": "Format vertikal yang dirancang untuk narasi visual yang padat.",
+    "quizPreviewTitle": "Pratinjau Kartu Kuis",
+    "quizPreviewDescription": "Jawab pertanyaan untuk melanjutkan. Gunakan tombol panah untuk menavigasi jika sudah dijawab.",
+    "restartQuiz": "Ulangi Kuis",
+    "minigameIntroTitle": "Banjir di Sekolah",
+    "minigameIntroDescription": "Anda adalah seorang siswa SMP. Hujan turun sangat deras, dan air mulai memasuki halaman sekolah Anda. Anda harus bertindak cepat dan tepat untuk memastikan semua orang aman.",
+    "minigameStart": "Mulai Skenario",
+    "minigameScore": "Skor:",
+    "minigameComplete": "Skenario Selesai!",
+    "minigameFinalScore": "Skor Akhir:",
+    "minigamePlayAgain": "Main Lagi"
+  },
+  "waveOfSchool": {
+    "heroTitle": "Wave of School: Saat Budaya Bertemu AI, Guru Menjadi Kreator",
+    "heroDescription": "Memberdayakan guru dan sekolah dengan AI untuk menciptakan, mengadaptasi, dan berbagi konten pembelajaran interaktif yang berakar pada kearifan lokal.",
+    "joinAsSchool": "Gabung sebagai Sekolah",
+    "tryAIGenerator": "Coba Generator Konten AI",
+    "visionTitle": "Pendidikan yang Mengingat, Belajar, dan Berkembang",
+    "visionDescription1": "Dari pendidikan bencana hingga pembangunan perdamaian, Wave of School mengubah cerita menjadi modul pembelajaran cerdas dan adaptif yang didukung oleh AI.",
+    "visionDescription2": "Guru tidak memulai dari nol — mereka berkreasi bersama dengan budaya, komunitas, dan teknologi.",
+    "visionDescription3": "Inilah cara Aceh mengajar dunia untuk belajar secara berbeda.",
+    "visionWoV": "Wave of Voice",
+    "visionWoVSub": "Cerita",
+    "visionWoS": "Wave of School",
+    "visionWoSSub": "Konten Pembelajaran",
+    "howItWorksTitle": "Dari Cerita menjadi Pelajaran Cerdas",
+    "howItWorksDescription": "Proses pembuatan konten AI menyederhanakan pembuatan pelajaran, memungkinkan guru untuk fokus pada apa yang mereka lakukan terbaik: mengajar.",
+    "step1Title": "1. Masukan",
+    "step1Description": "Guru memilih tema, mengunggah cerita lokal, atau video wawancara singkat.",
+    "step2Title": "2. Generasi AI",
+    "step2Description": "Sistem mengubah masukan menjadi kuis, komik, poster, atau modul interaktif.",
+    "step3Title": "3. Keluaran & Bagikan",
+    "step3Description": "Guru dapat menggunakannya langsung di kelas atau mengunggahnya ke Hub EduBoard untuk dibagikan.",
+    "demoButton": "Hasilkan Demo Gratis",
+    "aiHubTitle": "Hub Konten AI: Temukan, Remix, Ajarkan",
+    "aiHubDescription": "Jelajahi ekosistem konten siap pakai yang terus berkembang, dibuat oleh AI dan dikurasi oleh para pendidik.",
+    "browseModules": "Jelajahi 100+ Modul Pembelajaran AI",
+    "forSchoolsTitle": "Untuk Sekolah: Bergabung dengan Gelombang",
+    "forSchoolsDescription": "Jadilah sekolah mitra perintis dan dapatkan akses eksklusif ke ekosistem pembelajaran AI kami.",
+    "forSchoolsPoint1": "Akses ke 100+ rencana pelajaran berbasis AI.",
+    "forSchoolsPoint2": "Dasbor untuk melacak aktivitas & interaksi siswa.",
+    "forSchoolsPoint3": "Fitur ko-kreasi dengan sekolah lain.",
+    "forSchoolsPoint4": "Branding digital: “Mitra Tersertifikasi Wave of School”.",
+    "applyButton": "Daftar sebagai Sekolah Mitra",
+    "bookDemoButton": "Pesan Demo Langsung",
+    "forTeachersTitle": "Untuk Guru: Suara Anda, Pelajaran Anda",
+    "forTeachersQuote": "“Setiap guru punya cerita. Setiap cerita bisa mengajar dunia.”",
+    "forTeachersPoint1": "Dapatkan templat otomatis (PPT, komik, kuis).",
+    "forTeachersPoint2": "Dapatkan Asisten Pengajar AI (menghasilkan ide & pertanyaan).",
+    "forTeachersPoint3": "Bagikan hasil Anda dengan komunitas guru di seluruh Aceh.",
+    "startCreatingButton": "Mulai Membuat dengan AI",
+    "showcaseTitle": "AI dalam Aksi",
+    "showcaseDescription": "Lihat bagaimana Wave of School digunakan di kelas untuk menciptakan pengalaman belajar yang tak terlupakan.",
+    "impactTitle": "Dampak Kami, dalam Angka",
+    "impactDescription": "Mendorong perubahan nyata dalam ekosistem pendidikan lokal melalui adopsi teknologi dan partisipasi komunitas.",
+    "impactSchools": "Sekolah Bergabung",
+    "impactLessons": "Pelajaran AI Dihasilkan",
+    "impactStudents": "Siswa Terlibat",
+    "impactSatisfaction": "Kepuasan Guru",
+    "testimonial": "“Dengan Wave of School, saya mengubah cerita tsunami saya menjadi pelajaran digital yang disukai murid-murid saya.”",
+    "testimonialAuthor": "Ibu Nurdiani",
+    "testimonialRole": "Guru, SDN Simeulue Barat",
+    "joinMovementTitle": "Jadilah Gelombang Berikutnya",
+    "joinMovementDescription": "Mari berkolaborasi untuk masa depan pendidikan di Aceh. Apapun peran Anda, Anda bisa menjadi bagian dari perubahan.",
+    "joinForTeachers": "Untuk Guru",
+    "joinForTeachersDesc": "Mulai buat konten dan dapatkan akses ke Asisten AI.",
+    "joinForSchools": "Untuk Sekolah",
+    "joinForSchoolsDesc": "Daftarkan sekolah Anda sebagai mitra perintis.",
+    "joinForOrgs": "Untuk Organisasi",
+    "joinForOrgsDesc": "Jelajahi peluang kolaborasi untuk dampak yang lebih luas.",
+    "collaborateButton": "Berkolaborasi dengan Kami",
+    "becomePartnerButton": "Menjadi Mitra"
+  },
+  "profile": {
+    "redirecting": "Mengarahkan ke halaman login...",
+    "welcome": "Selamat Datang",
+    "teacher": "Guru",
+    "schoolPartner": "Sekolah Mitra",
+    "quote": "\"Kearifan hari ini menjadi pelajaran esok hari. Mari berkreasi bersama.\"",
+    "lessonsCreated": "Pelajaran AI Dibuat",
+    "studentsReached": "Siswa Terjangkau",
+    "storyImpact": "Skor Dampak Cerita",
+    "reflectionsCollected": "Refleksi Terkumpul",
+    "signOut": "Keluar",
+    "aiStudioTitle": "AI Studio: Buat Konten Baru",
+    "aiStudioDescription": "Ubah cerita atau ide Anda sendiri menjadi materi pembelajaran yang menarik hanya dalam beberapa klik.",
+    "lesson": "Pelajaran",
+    "quiz": "Kuis",
+    "comic": "Komik",
+    "reflection": "Refleksi",
+    "eduPoster": "EduPoster",
+    "startWithStory": "Mulai dengan cerita dari Wave of Voice:",
+    "searchStoryPlaceholder": "Cari cerita (misal: 'Smong')",
+    "generateButton": "Hasilkan",
+    "myContentTab": "Konten AI Saya",
+    "libraryTab": "Perpustakaan Belajar",
+    "lessonsTab": "Pelajaran",
+    "quizzesTab": "Kuis",
+    "comicsTab": "Komik",
+    "quizExampleTitle": "Kuis Interaktif: Smong & Sains",
+    "quizExampleDescription": "Berdasarkan: Cerita Smong",
+    "editButton": "Ubah",
+    "previewButton": "Pratinjau",
+    "createNewContent": "Buat Konten Baru",
+    "inspirationHubTitle": "Pusat Inspirasi",
+    "inspirationHubDescription": "Temukan dan remix pelajaran dari pendidik lain.",
+    "libraryPlaceholder": "Konten perpustakaan belajar akan ditampilkan di sini.",
+    "schoolHubTitle": "Hub Sekolah",
+    "schoolHubDescription": "Pantau aktivitas dan kelola guru di organisasi Anda.",
+    "teachersJoined": "Guru Bergabung",
+    "totalLessons": "Total Pelajaran Dibuat",
+    "manageTeachers": "Kelola Guru",
+    "achievementsTitle": "Prestasi",
+    "achievement1": "Pelajaran AI Pertama Dibuat",
+    "achievement2": "Integrator Kearifan Lokal",
+    "achievement3": "Kontributor 10 Besar EduBoard",
+    "communityFeedTitle": "Umpan Komunitas",
+    "communityFeedExample1_part1": "Pak Budi",
+    "communityFeedExample1_part2": " baru saja mengunggah kuis baru: 'Smong & Sains'.",
+    "communityFeedExample2_part1": "Acara:",
+    "communityFeedExample2_part2": " Workshop EduAI di Banda Aceh - ",
+    "communityFeedExample2_part3": "Gabung Sekarang",
+    "viewAll": "Lihat Semua",
+    "reflectionsTitle": "Refleksi Siswa",
+    "reflectionExample": "\"Saya baru tahu kalau kerja bakti juga bisa mencegah bencana.\"",
+    "reflectionAuthor": "- Siswa (Anonim)",
+    "impactReport": "Lihat Laporan Dampak"
   },
   "stories": {
     "smong-selamat-dari-lautan": {
