UBAH JADI oVER 20+ STORIES cOLLECTED (_for element span_)

--- a/src/lib/i18n/ace.json
+++ b/src/lib/i18n/ace.json
@@ -12,7 +12,7 @@
   },
   "home": {
     "hero": {
-      "pill": "Leubeh dari 100+ calitra ka geupeusapat",
+      "pill": "Leubeh dari 20+ calitra ka geupeusapat",
       "title": "Suara Teuga, Gema Arif Bijaksana",
       "description": "Jelajahi keurifan lokal, siaga bencana, dan peudame di Aceh melalui calitra-calitra yang geupeuhidup le teknologi AI.",
       "ctaExplore": "Jelajahi Calitra",
@@ -810,7 +810,7 @@
     },
     "ilmuFalak": {
       "video": {
-        "title": "Video Edukasi: Ilmu Falak, Navigasi Langet dan La'ôt",
+        "title": "Video Edukasi: Ilmu Falak, Navigasi La'ôt dan Langet",
         "description": "Meurunoe kiban dayah di Aceh peurunoe astronomi (Ilmu Falak) yang geunguy le nelayan untuk navigasi.",
         "info": "Video nyoe akan peugah kiban pengetahuan agama dan sains saling peulengkap dalam tradisi intelektual Aceh."
       },
